# http-server

./: .gitignore  LICENSE  http-server.cabal
Network/HTTP/: Server.hs
Network/HTTP/Server/: HtmlForm.hs  Logger.hs  Response.hs  Utils.hs
example/: LICENSE  README  SimpleWeb.cabal  SimpleWeb.hs  example.html  myscript.js
tests/: README  SimpleWeb.hs
