name:          http-server
version:       1.0.5
category:      Network
synopsis:      A library for writing Haskell web servers.
description:   A library for writing Haskell web servers.
author:        Galois, Inc.
maintainer:    diatchki@galois.com
license:       BSD3
license-file:  LICENSE
homepage:      https://github.com/GaloisInc/http-server
cabal-version: >= 1.6
build-type:    Simple

extra-source-files:
  example/README
  example/*.js
  example/*.hs
  example/*.cabal

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  exposed-modules:
    Network.HTTP.Server
    Network.HTTP.Server.HtmlForm
    Network.HTTP.Server.Logger
    Network.HTTP.Server.Response
  other-modules:
    Network.HTTP.Server.Utils

  extensions:
    CPP
    UndecidableInstances

  build-depends:
    HTTP        >= 4000.2.0 && < 5000,
    base        >= 4        && < 5,
    mime        >= 0.3      && < 2,
    url         >= 2        && < 3,
    utf8-string >= 0.3.4    && < 2,
    text        >= 1.0

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6 && < 3
  else
    build-depends: network >= 2.4.0.0 && < 2.6

  if !os(windows)
    build-depends: unix >= 2 && < 3
    CPP-options:   -D_OS_UNIX

  if impl(ghc >= 7.6.1)
    CPP-options:   -DNO_PRELUDE_CATCH

  ghc-options: -Wall -O2

source-repository head
  type:     git
  location: https://github.com/GaloisInc/http-server.git
