name:          SimpleWeb
version:       0.1
category:      Network
synopsis:      An example of using the http-server library.
description:   An example of using the http-server library.
author:        Iavor S. Diatchki
maintainer:    diatchki@galois.com
license:       BSD3
license-file:  LICENSE
homepage:      http://code.galois.com/
cabal-version: >= 1.2
build-type:    Simple

executable SimpleWeb
  main-is: SimpleWeb.hs

  build-depends:
    base        >= 4    && < 5,
    filepath    >= 1    && < 2,
    http-server >= 0.2  && < 2,
    json        >= 0.4  && < 1,
    url         >= 2.1  && < 3,
    utf8-string >= 0.3  && < 1,
    xhtml       >= 3000 && < 3001

  ghc-options: -Wall -O2
